# satisfaction

./: .gitignore  .travis.yml  README.md  cabal.project  run-tests.sh  stack.yaml
satisfaction/: satisfaction.cabal  trivial-contradiction.cnf
satisfaction-conduit/: LICENSE  satisfaction-conduit.cabal
satisfaction-conduit/src/SAT/: Conduit.hs
satisfaction-core/: satisfaction-core.cabal
satisfaction-core/bench/: satisfaction-bench.hs
satisfaction-core/src/: Satisfaction.hs
satisfaction-core/src/Control/Monad/: Prim.hs
satisfaction-core/src/Data/: URef.hs  Unbox.hs
satisfaction-core/src/Data/Array/: Dynamic.hs  Heap.hs  Prim.hs  Traverse.hs  Vector.hs
satisfaction-core/src/Data/Array/Dynamic/: Unboxed.hs
satisfaction-core/src/Data/Array/Prim/: Generic.hs  Internal.hs  Mutable.hs  Unboxed.hs
satisfaction-core/src/Data/Array/Prim/Unboxed/: Internal.hs  Mutable.hs
satisfaction-core/src/Data/Array/Vector/: Unboxed.hs
satisfaction-core/src/Data/Ix/: Unsafe.hs  Zero.hs
satisfaction-core/src/Data/Ref/: Prim.hs
satisfaction-core/src/SAT/: CNF.hs  Literal.hs  Solver.hs
satisfaction-core/src/SAT/Solver/: Monad.hs  Types.hs
satisfaction-core/src/Satisfaction/: CDCL.hs  CNF.hs  Formula.hs
satisfaction-core/src/Satisfaction/CDCL/: AnalyzeConflict.hs  Clause.hs  Constraint.hs  Core.hs  Monad.hs  Simplify.hs  Solver.hs  Statistics.hs  UnitPropagation.hs
satisfaction-core/src/Satisfaction/CDCL/Constraint/: Clause.hs  Equality.hs
satisfaction-core/src/Satisfaction/Formula/: CNF.hs  Internal.hs  Literal.hs  Tseitin.hs
satisfaction-core/src/Satisfaction/Internal/: AnalyzeConflict.hs  LearnedClauses.hs  Literal.hs  Monad.hs  Simplify.hs  Solver.hs  UnitPropagation.hs
satisfaction-core/src/release/SAT/Solver/: Debug.hs
satisfaction-core/src/trace/disable/Satisfaction/Internal/: Debug.hs
satisfaction-core/src/trace/enable/SAT/Solver/: Debug.hs
satisfaction-core/src/trace/enable/Satisfaction/Internal/: Debug.hs
satisfaction-core/src/unsafe/disable/Data/Array/MArray/: Unsafe.hs
satisfaction-core/src/unsafe/enable/Data/Array/MArray/: Unsafe.hs
satisfaction-core/tests/: satisfaction-tests.hs
satisfaction-core/tests/cnf/sat/: test09.cnf  test1.cnf  test2.cnf  test3.cnf  test4.cnf  test6.cnf  test7.cnf
satisfaction-core/tests/cnf/unsat/: test5.cnf  test8.cnf
satisfaction/src/: Main.hs
