name:                satisfaction-conduit
version:             0.1.0.0
synopsis:            A conduit API to satisfaction-core
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
category:            Constraints
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: SAT.Conduit
  build-depends:       base >=4.6 && <5,
                       satisfaction-core >= 0.1 && < 0.2,
                       conduit >= 1 && < 1.3,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010