name:                satisfaction-core
version:             0.1.0.0
synopsis:            Solvers for satisfiability and related problems
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
category:            Constraints
build-type:          Simple
cabal-version:       >=1.10

flag trace
  description: Enable debug tracing
  default: False

flag unsafe
  description: Enable unsafe array access
  default: True

library
  exposed-modules: SAT.Solver
                   SAT.CNF
                   SAT.Literal
                   Data.Array.Dynamic
                   Data.Array.Dynamic.Unboxed
                   Data.Array.Heap
                   Data.Array.Prim
                   Data.Array.Prim.Generic
                   Data.Array.Prim.Mutable
                   Data.Array.Prim.Unboxed
                   Data.Array.Prim.Unboxed.Mutable
                   Data.Array.Traverse
                   Data.Array.Vector
                   Data.Array.Vector.Unboxed
                   Data.Ref.Prim
                   Data.Ix.Zero
                   Data.Unbox
  other-modules: SAT.Solver.Monad
                 SAT.Solver.Debug
                 Control.Monad.Prim
                 Data.Array.Prim.Internal
                 Data.Array.Prim.Unboxed.Internal
  build-depends: base >= 4.6 && < 5,
                 containers >= 0.5 && < 0.6
  hs-source-dirs: src
  if flag(trace)
    hs-source-dirs: src/trace/enable
  else
    hs-source-dirs: src/trace/disable

  default-language: Haskell2010
  ghc-options: -Wall -O1
  ghc-prof-options: -auto-all

test-suite satisfaction-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: satisfaction-tests.hs
  hs-source-dirs: tests
  ghc-options: -Wall
  build-depends: satisfaction-core,
                 base,
                 array,
                 transformers,
                 filemanip >= 0.3.5 && < 0.4,
                 parse-dimacs >= 1.3 && < 2,
                 tasty >= 0.10 && < 0.11,
                 tasty-hunit >= 0.9 && < 0.10,
                 tasty-quickcheck >= 0.8 && < 0.9,
                 QuickCheck


